--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
       // "constants/*": ["constants/*"],
       // "helpers/*": ["helpers/*"],
       // "hooks/*": ["hooks/*"],
-      // "store/*": ["store/*"],
+      "store/*": ["store/*"],
       // "services/*": ["services/*"],
       // "shared/*": ["shared/*"],
       // "styles/*": ["styles/*"],
       // "utils/*": ["utils/*"],
       "routes/*": ["routes/*"],
-      // "interfaces/*": ["interfaces/*"],
+      "interfaces/*": ["interfaces/*"],
    },
     "target": "ESNext",
     "useDefineForClassFields": true,
