Header Finished and Refactoring Whole Tailwind UI Component HEader one

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "assets/*": ["assets/*"],
       "components/*": ["components/*"],
       // "config/*": ["config/*"],
-      // "constants/*": ["constants/*"],
+      "constants/*": ["constants/*"],
       // "helpers/*": ["helpers/*"],
       // "hooks/*": ["hooks/*"],
       "store/*": ["store/*"],
