--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
