FIxing Bug adding detailed mock datas using json-server and scrolltoptop on every page changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
       // "config/*": ["config/*"],
       "constants/*": ["constants/*"],
       "mocks/*": ["mocks/*"],
-      // "hooks/*": ["hooks/*"],
+      "hooks/*": ["hooks/*"],
       "store/*": ["store/*"],
       // "services/*": ["services/*"],
       // "shared/*": ["shared/*"],
-      // "styles/*": ["styles/*"],
+      "client/*": ["client/*"],
       "utils/*": ["utils/*"],
       "routes/*": ["routes/*"],
       "interfaces/*": ["interfaces/*"],
